fix: Smaller buttons, less gap in nav

--- a/app/globals.css
+++ b/app/globals.css
@@ -163,11 +163,11 @@
     }
 
     ul {
-      @apply flex flex-row items-center gap-6;
+      @apply flex flex-row items-center gap-4;
     }
 
     button {
-      @apply bg-primary hover:bg-primary/90 w-fit cursor-pointer items-center justify-center rounded-[6px] px-4 py-2.5 text-lg font-semibold text-black;
+      @apply bg-primary hover:bg-primary/90 w-fit cursor-pointer items-center justify-center rounded-[6px] px-2 py-1 font-semibold text-black;
     }
   }
 
